@@ -10,5 +10,7 @@ GammaLib 1.7.1 is a bug fix release for GammaLib release 1.7.
 
 The following bugs were fixed:
 
+* [`3280 <https://cta-redmine.irap.omp.eu/issues/3280>`_] -
+  Add quotes to sky region names
 * [`3279 <https://cta-redmine.irap.omp.eu/issues/3279>`_] -
   Fix broken power law flux and eflux computation bug
