@@ -2,3 +2,7 @@
 global color=green dashlist=8 3 width=1 font="helvetica 10 normal roman" select=1 highlite=1 dash=0 fixed=0 edit=1 move=1 delete=1 include=1 source=1
 fk5
 circle(0.1, -35.6, 10.0)
+circle(0.1, -35.6, 10.0) # text={}
+circle(0.1, -35.6, 10.0) # text={Test 1}
+circle(0.1, -35.6, 10.0) # text='Test 2'
+circle(0.1, -35.6, 10.0) # text="Test 3"
